location map and gallery images

--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
             </div> -->
 
             <div class="col-lg-4 col-xs-12 gallery-item">
-              <img class="img-fluid" src="img/gallery/kitchenette.jpg" alt="Kitchenette" style="transform: rotate(90deg); object-fit: cover">
+              <img class="img-fluid-90" src="img/gallery/kitchenette.jpg" alt="Kitchenette">
             </div>
 
             <div class="col-lg-4 col-xs-12 gallery-item">
-              <img class="img-fluid" src="img/gallery/bedroom.jpg" alt="Bedroom" style="transform: rotate(90deg); object-fit: cover">
+              <img class="img-fluid-90" src="img/gallery/bedroom.jpg" alt="Bedroom">
             </div>
 
             <div class="col-lg-4 col-xs-12 gallery-item">
-              <img class="img-fluid" src="img/gallery/bathroom.jpg" alt="Bathroom" style="transform: rotate(90deg); object-fit: cover">
+              <img class="img-fluid-90" src="img/gallery/bathroom.jpg" alt="Bathroom">
             </div>
 
         </div>
